<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.dkuberski.budzet.Login"
    tools:showIn="@layout/activity_login">



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/loginEmailEditText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/editTextHintEmail" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/loginEmailEditText"
        android:layout_alignLeft="@+id/loginEmailEditText"
        android:layout_alignStart="@+id/loginEmailEditText"
        android:id="@+id/loginPasswordEditText"
        android:hint="@string/editTextHint" />

    <Button
        android:text="@string/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="click"
        android:layout_marginTop="25dp"
        android:id="@+id/loginButtonCommit"
        android:layout_below="@+id/loginPasswordEditText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:id="@+id/textView"
        android:layout_below="@+id/loginButtonCommit"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/buttonRegister"
        android:onClick="goToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonGoToRegister"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
