<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.dkuberski.budzet.Register"
    tools:showIn="@layout/activity_register">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/registerEmailEditText"
        android:hint="@string/editTextHintEmail"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/registerEmailEditText"
        android:layout_alignLeft="@+id/registerEmailEditText"
        android:layout_alignStart="@+id/registerEmailEditText"
        android:id="@+id/registerPasswordEditText"
        android:hint="@string/editTextHint" />

    <Button
        android:id="@+id/registerButtonCommit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerPasswordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:onClick="sendPost2"
        android:text="@string/buttonRegister" />

    <TextView
        android:text="@string/textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:id="@+id/textView2"
        android:layout_below="@+id/registerButtonCommit"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonGoToLogin"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="58dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Login"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/registerPasswordEditText" />

</RelativeLayout>
